src/snapshots/purs_oxide__desugar_rename__tests__duplicate_data_decl.snap
---
source: src/desugar_rename.rs
expression: "index_module(indoc!(\"\n        module Test where\n        data Foo\n        data Foo\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            [salsa id]: 0,
            name: "Test",
        },
        types: {
            AbsoluteName {
                [salsa id]: 0,
                module: ModuleId {
                    [salsa id]: 0,
                    name: "Test",
                },
                name: Symbol {
                    [salsa id]: 0,
                    text: "Foo",
                },
            }: Data(
                DataDecl {
                    type_: Data,
                    name: AbsoluteName {
                        [salsa id]: 0,
                        module: ModuleId {
                            [salsa id]: 0,
                            name: "Test",
                        },
                        name: Symbol {
                            [salsa id]: 0,
                            text: "Foo",
                        },
                    },
                    params: [],
                    kind: None,
                    constructors: [],
                },
            ),
        },
        values: {},
    },
    [
        Diagnostic {
            start: 27,
            end: 35,
            message: "Duplicate type declaration Foo",
            file: "test.purs",
        },
    ],
)
