src/snapshots/purs_oxide__desugar_rename__tests__duplicate_value.snap
---
source: src/desugar_rename.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foo = 1\n        bar = 2\n        foo = 1\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            [salsa id]: 0,
            name: "Test",
        },
        types: {},
        values: {
            AbsoluteName {
                [salsa id]: 0,
                module: ModuleId {
                    [salsa id]: 0,
                    name: "Test",
                },
                name: Symbol {
                    [salsa id]: 0,
                    text: "foo",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    [salsa id]: 0,
                    module: ModuleId {
                        [salsa id]: 0,
                        name: "Test",
                    },
                    name: Symbol {
                        [salsa id]: 0,
                        text: "foo",
                    },
                },
                type_: None,
                equations: [
                    CaseBranch {
                        pats: [],
                        expr: Unconditional(
                            Located(
                                SourceSpan {
                                    start: 24,
                                    end: 25,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    },
                ],
            },
            AbsoluteName {
                [salsa id]: 1,
                module: ModuleId {
                    [salsa id]: 0,
                    name: "Test",
                },
                name: Symbol {
                    [salsa id]: 1,
                    text: "bar",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    [salsa id]: 1,
                    module: ModuleId {
                        [salsa id]: 0,
                        name: "Test",
                    },
                    name: Symbol {
                        [salsa id]: 1,
                        text: "bar",
                    },
                },
                type_: None,
                equations: [
                    CaseBranch {
                        pats: [],
                        expr: Unconditional(
                            Located(
                                SourceSpan {
                                    start: 32,
                                    end: 33,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    },
    [
        Diagnostic {
            start: 34,
            end: 41,
            message: "Duplicate value declaration foo",
            file: "test.purs",
        },
    ],
)
