src/snapshots/purs_oxide__desugar_rename__tests__foreign_import.snap
---
source: src/desugar_rename.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foreign import foo :: Int\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            [salsa id]: 0,
            name: "Test",
        },
        types: {},
        values: {
            AbsoluteName {
                [salsa id]: 0,
                module: ModuleId {
                    [salsa id]: 0,
                    name: "Test",
                },
                name: Symbol {
                    [salsa id]: 0,
                    text: "foo",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    [salsa id]: 0,
                    module: ModuleId {
                        [salsa id]: 0,
                        name: "Test",
                    },
                    name: Symbol {
                        [salsa id]: 0,
                        text: "foo",
                    },
                },
                type_: Some(
                    Located(
                        SourceSpan {
                            start: 40,
                            end: 43,
                        },
                        TypeConstructor(
                            QualifiedName {
                                [salsa id]: 0,
                                module: None,
                                name: Symbol {
                                    [salsa id]: 1,
                                    text: "Int",
                                },
                            },
                        ),
                    ),
                ),
                equations: [],
            },
        },
    },
    [],
)
