src/snapshots/purs_oxide__desugar_rename__tests__type_and_data_decl_conflict.snap
---
source: src/desugar_rename.rs
expression: "index_module(indoc!(\"\n        module Test where\n        type Foo = Int\n        data Foo\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            [salsa id]: 0,
            name: "Test",
        },
        types: {
            AbsoluteName {
                [salsa id]: 0,
                module: ModuleId {
                    [salsa id]: 0,
                    name: "Test",
                },
                name: Symbol {
                    [salsa id]: 0,
                    text: "Foo",
                },
            }: Type(
                TypeSynonymDecl {
                    name: AbsoluteName {
                        [salsa id]: 0,
                        module: ModuleId {
                            [salsa id]: 0,
                            name: "Test",
                        },
                        name: Symbol {
                            [salsa id]: 0,
                            text: "Foo",
                        },
                    },
                    params: [],
                    body: Located(
                        SourceSpan {
                            start: 29,
                            end: 32,
                        },
                        TypeConstructor(
                            QualifiedName {
                                [salsa id]: 0,
                                module: None,
                                name: Symbol {
                                    [salsa id]: 1,
                                    text: "Int",
                                },
                            },
                        ),
                    ),
                },
            ),
        },
        values: {},
    },
    [
        Diagnostic {
            start: 33,
            end: 41,
            message: "Duplicate type declaration Foo",
            file: "test.purs",
        },
    ],
)
