src/snapshots/purs_oxide__desugar_rename__tests__type_sig_without_equations_1.snap
---
source: src/desugar_rename.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foo :: Int\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            [salsa id]: 0,
            name: "Test",
        },
        types: {},
        values: {},
    },
    [
        Diagnostic {
            start: 18,
            end: 28,
            message: "Type signature of foo should be followed by its definition",
            file: "test.purs",
        },
    ],
)
